Added support for handling 'subscription.charge.completed' webhook.

--- a/model/rebel.conf
+++ b/model/rebel.conf
@@ -20,21 +20,21 @@
     "float": "float",
     "double": "double",
     "dateTime": "LocalDateTime",
-    "date": "Date",
+    "date": "LocalDate",
     "time": "LocalTime",
     "binary": "byte[]"
   },
   "persistence": {
-    "enablePersistence": false,
+    "enablePersistence": true,
     "idAttributeType": "Long",
     "generateSerializable": false,
     "generateEquals": true,
     "useStringEnumTypes": true,
-    "useTemporalAnnotation": true,
+    "useTemporalAnnotation": false,
     "useNotNullAnnotation": true
   },
   "spring": {
-    "enableSpring": false,
+    "enableSpring": true,
     "commonRepositoryInterface": "CrudRepository"
   }
 }
