Minor pom.xml update

--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,16 @@
     <name>FastSpring Webhooks</name>
     <description>The purpose of this project is to provide data structures needed to process FastSpring webhooks in Java applications.</description>
     <url>https://github.com/archrebel/fastspring-webhooks</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
