Code has been regenerated using the latest version of generator.
No actual changes.

--- a/model/rebel.conf
+++ b/model/rebel.conf
@@ -33,8 +33,11 @@
     "useTemporalAnnotation": false,
     "useNotNullAnnotation": true
   },
+  "jackson": {
+    "enableJackson": true
+  },
   "spring": {
-    "enableSpring": true,
+    "enableSpring": false,
     "commonRepositoryInterface": "CrudRepository"
   }
 }
